--- a/base-installation.org
+++ b/base-installation.org
@@ -1,34 +1,44 @@
-* Desktop
-#+BEGIN_SRC sh
-    apt-get -y install audacity libre-office gimp battle-of-wesnoth texlive-full iceweasel okular dropbox-nautilus frescobaldi
-#+END_SRC
-* Tablet
-#+BEGIN_SRC sh
-    apt-get -y install tightvncserver xpdf w3m
-#+END_SRC
 * Common
 #+BEGIN_SRC sh
     echo "deb http://ftp.de.debian.org/debian unstable main contrib non-free" > /etc/apt/sources.list
     apt-get update
     apt-get -y upgrade
-    apt-get -y install i3 ipython texlive-base lilypond emacs24 emacs24-non-dfsg git python3 htop gnutls-bin
+    apt-get -y install i3 ipython emacs24 emacs24-non-dfsg git python3 htop gnutls-bin
+    apt-get -y install texlive-base lilypond 
     
     mkdir ~/git
-
+    
     cd ~/git
     git clone http://www.github.com/knupfer/dotfiles.git
     git clone http://www.github.com/knupfer/knupfer.github.io.git
     git clone http://www.github.com/knupfer/shorthand.el.git
     git clone http://www.github.com/knupfer/setup.git
-
+    
     cd ..
     ln -s git/dotfiles/emacs/.emacs .emacs
     ln -s git/dotfiles/emacs/.emacs.d/ .emacs.d
     ln -s git/dotfiles/i3wm/.i3/ .i3
+    sh ~/.i3/change-mode.sh ACTIVE
+    
+#+END_SRC
 
+* Desktop
+#+BEGIN_SRC sh
+    apt-get -y install libre-office texlive-full iceweasel okular  
+    apt-get -y install audacity gimp frescobaldi dropbox-nautilus
+    apt-get -y install battle-of-wesnoth
+#+END_SRC
+
+* Tablet
+#+BEGIN_SRC sh
+    apt-get -y install tightvncserver xpdf w3m
+#+END_SRC
+
+* Cleanup
+#+BEGIN_SRC sh
     apt-get -y dist-upgrade
     apt-get clean
     apt-get -y autoremove
-
+    
     reboot
 #+END_SRC
