--- a/base-installation.org
+++ b/base-installation.org
@@ -3,7 +3,7 @@
     echo "deb http://ftp.de.debian.org/debian unstable main contrib non-free" > /etc/apt/sources.list
     apt-get update
     apt-get -y upgrade
-    apt-get -y install i3 ipython emacs24 emacs24-non-dfsg git python3 htop gnutls-bin
+    apt-get -y install i3 xdotool ipython emacs24 emacs24-non-dfsg git python3 htop gnutls-bin
     apt-get -y install texlive-base lilypond 
     
     mkdir ~/git
