--- a/base-installation.org
+++ b/base-installation.org
@@ -13,6 +13,7 @@
     git clone http://www.github.com/knupfer/knupfer.github.io.git
     git clone http://www.github.com/knupfer/shorthand.el.git
     git clone http://www.github.com/knupfer/setup.git
+    git clone http://www.github.com/knupfer/global-emacs.git
     
     cd ..
         
